finished all routes, controllers, swagger, and validations
